--- a/README
+++ b/README
@@ -11,22 +11,19 @@ To build the CARP-Benchmarks, you need:
 	p7zip
 - Build OpenCV:
 	Tested with a patched version of 2.4.6.1 - the patch is included in the repository.
-	Download 2.4.6.1:
+	Download 2.4.6.1 and apply 'opencv-2.4.6.1_autolock_and_gpuimg.patch':
 	    git clone https://github.com/Itseez/opencv.git
-	    git checkout -b2.4.6.1
-	Apply 'opencv-2.4.6.1_autolock_and_gpuimg.patch' before building:
 	    cd opencv
+	    git checkout 2.4.6.1
 	    patch -p0 < index path_to_CARP-Benchmarks/opencv-2.4.6.1_autolock_and_gpuimg.patch
 	    cd ..
 	While building OpenCV, make sure to enable opencv_ocl module in CMake.
 	    mkdir opencv-build
 	    cd opencv-build
-	    cmake -i ../opencv
-	This starts cmake in wizard mode, asking questions what to enable/disable. Most settings can be left as default, you need to specify OpenCL headers and libraries.
-	Required modules are: opencv_core opencv_imgproc opencv_ocl opencv_highgui, make sure they are "ON" (Should be by default)
+	    cmake ../opencv -DWITH_TBB=ON -DENABLE_AVX=ON -DENABLE_SSE41=ON -DENABLE_SSE42=ON  -DENABLE_SSSE3=ON -DENABLE_SSE3=ON -DOPENCL_INCLUDE_DIR=/usr/local/cuda/include/ -DOPENCL_LIBRARY=/usr/lib/libOpenCL.so
 	For good performance it is advised to enable all instruction sets (SSE 3/SSSE 3/SSE 4.1/SSE 4.2/AVX) supported by the processor (ENABLE_SSE3=ON, etc.), and Intel Threading Building Blocks (WITH_TBB=ON).
 	And finally:
-	    make all
+	    make all -j12
 	
 	Alternatively, you can try newer versions that might have fixed the issue in the patch, but those versions are not tested.
 - Edit required paths in the makefile in CARP-Benchmarks root directory:
